# latent-dynamics

./: .gitignore  CODE_GUIDE.md  CONTRIBUTING.md  LICENSE  pyproject.toml  sample_cli_usage.sh
notebooks/: dev.ipynb  latent_probe_lat_scan_workbench.ipynb  qd_active_colab_runner.ipynb  residual_stream_analysis.ipynb  workbench.ipynb
scripts/: collect_trajectories.py  visualize_trajectories.py
src/latent_dynamics/: __init__.py  __main__.py  activations.py  analysis.py  cli.py  config.py  data.py  drift.py  dynamics.py  hub.py  judge.py  models.py  rep_eng.py  trajectory_features.py  utils.py  viz.py
src/latent_dynamics/dayang/: activations.py  analysis.py  data.py  model.py  projections.py  scoring.py  utils.py  visualizations.py  widgets.py
src/latent_dynamics/experiments/: benchmark_suite.py  churn_dynamics_experiment.py  kalman_conformal_experiment.py  koopman_experiment.py  m2_m3_pipeline.py  qd_active_boundary_experiment.py  trajectory_features.py
src/latent_dynamics/learning_experiment/: __init__.py  active_learning.py  comparison.py  contrastive_probe.py  data.py  figures.py  metrics.md
src/latent_dynamics/prompts/judge/: safety_judge.jinja
src/latent_dynamics/prompts/qd_active/: mutate_prompt.jinja  safety_judge.jinja
src/latent_dynamics/semimech/: activations.py  analysis.py  data.py  model.py  utils.py  visualizations.py  widgets.py
