[project]
name = "latent-dynamics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ndalton12", email = "niall.dalton12@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.6.0",
    "flashlite>=0.1.0",
    "jupyter>=1.1.1",
    "mapie>=0.9.2",
    "plotly>=6.5.2",
    "ribs>=0.8.3",
    "safetensors>=0.5.0",
    "sae-lens>=6.37.5",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",
    "transformers>=5.2.0",
    "typer>=0.15.0",
]

[project.scripts]
latent-dynamics = "latent_dynamics.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
