[project]
name = "latent-dynamics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ndalton12", email = "niall.dalton12@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.6.0",
    "jupyter>=1.1.1",
    "numpy",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
    "transformers>=5.2.0",
    "matplotlib>=3.10.8",
    "natsort>=8.4.0",
    "seaborn>=0.13.2",
]

[project.scripts]
latent-dynamics = "latent_dynamics.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
